--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
 
 
 .header{
-    margin-top: 1rem;
+    margin-top: 10rem;
     font-style:oblique;
     width: 50%;
     display: flex;
@@ -33,7 +33,7 @@ body{
 .h1{
     margin-top: 2rem;
     position: absolute;
-    top: -155px;
+    top: -110px;
     width: 100%;
     font-size: 100px;
     font-weight: 100;
@@ -80,6 +80,7 @@ body{
     padding: 15px 15px 15px 5px;
     font-family: inherit;
     font-weight: inherit;
+    justify-content: space-between;
 }
 
 .listItem{
